# pim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  run_ramulator_both.sh  run_ramulator_host.sh  run_ramulator_pim.sh
test/: test1.cpp  test1.host.cfg  test1.pim.cfg  test1_SSE.hpp  test1_pim.sh  test1_scalar.hpp
